<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <POU Name="FB_HomeToSwitch" Id="{9890b2a1-f87c-4e55-871a-a54ee70e279d}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_HomeToSwitch
VAR_INPUT
	En: BOOL;
	bReset: BOOL;
    bExecute: BOOL;			
	bSensor: BOOL;	
	bSearchDirection: BOOL; // 0=backward 1=forward
	fHomePosition:LREAL;
	Axis: AXIS_REF;
END_VAR
VAR_OUTPUT
	EnO: BOOL;	
	bBusy: BOOL;
	bDone: BOOL;
	bError: BOOL;
	nErrorId: UDINT;
END_VAR
VAR
	fbHome: MC_Home;	
	fbWriteHomeDirCamToNC:FB_WriteParameterInNc_v1_00;
	fbWriteHomeDirSyncToNC:FB_WriteParameterInNc_v1_00;
	bConfigNCDone:BOOL:=FALSE;
	fbRTrigg: R_TRIG;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[En:=EnO;
IF bReset THEN
	bConfigNCDone:=FALSE;
	bError:=FALSE;
	nErrorId:=0;
END_IF

//Start preparation of NC if rising edge on bExecute
fbRTrigg(CLK:=bExecute);
IF fbRTrigg.Q THEN
	bConfigNCDone:=FALSE;
END_IF

fbWriteHomeDirCamToNC(
	bExecute:=bExecute AND NOT bConfigNCDone,
	nDeviceGroup:=16#5000,
	nIndexOffset:=16#101,	//Direction for Calibration Cam Search	
	nData:=BOOL_TO_DWORD(NOT bSearchDirection),
	Axis:=Axis
);

//DO WE NEED THIS?
fbWriteHomeDirSyncToNC(
	bExecute:= bExecute AND NOT bConfigNCDone,
	nDeviceGroup:=16#5000 ,
	nIndexOffset:=16#102 , //Direction for Sync Impuls Search
	nData:=BOOL_TO_DWORD(NOT bSearchDirection),
	Axis:= Axis 
);

IF NOT bConfigNCDone AND fbWriteHomeDirCamToNC.bDone AND fbWriteHomeDirSyncToNC.bDone THEN
  bConfigNCDone:=TRUE;
END_IF
	
fbHome(
	Execute:=bExecute AND bConfigNCDone,
	Position:=fHomePosition,
	HomingMode:=0,
	bCalibrationCam:=bSensor,
	Axis:=Axis
	);

bBusy:=(fbHome.Busy OR NOT bConfigNCDone) AND bExecute;
bDone:=fbHome.Done AND bConfigNCDone;

bError:=fbHome.Error OR fbWriteHomeDirCamToNC.bError OR fbWriteHomeDirSyncToNC.bError;
IF fbHome.Error THEN
  nErrorId:=fbHome.ErrorID;
ELSIF fbWriteHomeDirCamToNC.bError THEN
  nErrorId:=fbWriteHomeDirCamToNC.nErrorId;
ELSIF fbWriteHomeDirSyncToNC.bError THEN
  nErrorId:=fbWriteHomeDirSyncToNC.nErrorId;
END_IF 	]]></ST>
    </Implementation>
    <LineIds Name="FB_HomeToSwitch">
      <LineId Id="9" Count="0" />
      <LineId Id="140" Count="1" />
      <LineId Id="143" Count="1" />
      <LineId Id="142" Count="0" />
      <LineId Id="95" Count="1" />
      <LineId Id="49" Count="0" />
      <LineId Id="98" Count="2" />
      <LineId Id="127" Count="0" />
      <LineId Id="102" Count="3" />
      <LineId Id="128" Count="0" />
      <LineId Id="111" Count="0" />
      <LineId Id="131" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="154" Count="5" />
      <LineId Id="153" Count="0" />
      <LineId Id="164" Count="0" />
      <LineId Id="135" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="77" Count="3" />
      <LineId Id="169" Count="0" />
      <LineId Id="172" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="171" Count="0" />
      <LineId Id="146" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="148" Count="2" />
      <LineId Id="166" Count="1" />
      <LineId Id="151" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>